<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".culturas">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="119dp"
        android:layout_height="165dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nayleng" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="231dp"
        android:layout_height="102dp"
        android:layout_marginTop="56dp"
        android:text="@string/tb_cul"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="413dp"
        android:layout_height="488dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:fontFamily="sans-serif-black"
                android:lineSpacingExtra="14sp"
                android:text="@string/Titulo"
                android:textAlignment="center"
                android:textColor="#EFEFEE"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="163dp"
                android:contentDescription="@string/btnimg"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ojo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Contenido_culturas"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:text="@string/Cul_cor"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="163dp"
                android:contentDescription="@string/culimg"
                android:scaleType="fitXY"

                app:srcCompat="@drawable/cora" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coracul"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:text="@string/nanana"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="163dp"
                android:contentDescription="@string/culimg"
                android:scaleType="fitXY"

                app:srcCompat="@drawable/nahualtl" />
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NAhualtl"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginBottom="4dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:onClick="home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.757"
        app:srcCompat="@mipmap/ic_home_foreground" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:onClick="clase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.769"
        app:srcCompat="@mipmap/ic_libros_foreground" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.757"
        app:srcCompat="@mipmap/ic_mundo_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>