<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clases">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="119dp"
        android:layout_height="165dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nayleng" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/btnimg"
        android:onClick="Conversa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/btncvs" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="375dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/btnimg"
        android:onClick="fam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6"
        app:srcCompat="@drawable/btnfam" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/btnimg"
        android:onClick="otros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:srcCompat="@drawable/btnotros" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="235dp"
        android:layout_height="49dp"
        android:text="@string/tb_classes"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/imageButton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/todo"
        android:onClick="home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8"
        app:layout_constraintVertical_bias="0.757"
        app:srcCompat="@mipmap/ic_home_foreground" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/todo"
        android:onClick="clase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8"
        app:layout_constraintVertical_bias="0.757"
        app:srcCompat="@mipmap/ic_libros_foreground" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/todo"
        android:onClick="cultu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8"
        app:layout_constraintVertical_bias="0.757"
        app:srcCompat="@mipmap/ic_mundo_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>